Move current development version